# Vizier

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  config.example.yaml  docker-compose.yml  pyproject.toml  vizier.service
.claude/: settings.json  settings.local.json  settings.local.json.example
.claude/agents/: docs-updater.md  spec-readiness-reviewer.md
.claude/commands/: catchup.md
.claude/hooks/: test-on-change.sh
.claude/rules/: architecture-review.md
.claude/skills/design/: SKILL.md
.claude/skills/done/: SKILL.md
.claude/skills/edit-permissions/: SKILL.md
.claude/skills/sync/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json  init-firewall.sh
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: claude-code-review.yml  deploy.yml  publish.yml  tests.yml
apps/cli/: pyproject.toml
apps/cli/tests/: test_daemon_commands.py  test_secret_commands.py  test_spec_commands.py
apps/cli/vizier/cli/: __init__.py  daemon_commands.py  secret_commands.py  spec_commands.py
apps/daemon/: pyproject.toml
apps/daemon/tests/: test_config.py  test_health.py  test_process.py  test_telegram.py
apps/daemon/vizier/daemon/: __init__.py  config.py  health.py  process.py  telegram.py
docs/: AGENT_PROMPTS.md  AGENT_PROTOCOL.md  AGENT_SPECS.md  ARCHITECTURE.md  CHANGELOG.md  DECISIONS.md  DEPLOYMENT.md  DEVELOPMENT_PROCESS.md  FILE_PROTOCOL.md  HERMES_REFERENCE.md  IMPLEMENTATION_PLAN.md  OPENCLAW_SETUP.md  PHASE_13_PLAN.md  PRD_V2.md  SPEC_FORMAT.md  TECH_STACK.md  USE_CASES.md
docs/postmortem/: 2026-02-17-ea-stateless-gap.md
docs/v1/: DECISIONS.md  IMPLEMENTATION_PLAN.md
example.vizier/: config.yaml
hermes/: AGENTS.md  Dockerfile  SOUL.md  config.yaml
hermes/scripts/: entrypoint.sh  healthcheck.sh
libs/core/: pyproject.toml
libs/core/tests/: test_inner_loop_integration.py  test_integration.py
openclaw/config/: agents.json  openclaw.json
openclaw/workspaces/architect-template/: SOUL.md
openclaw/workspaces/pasha-template/: AGENTS.md  SOUL.md
openclaw/workspaces/quality-gate-template/: SOUL.md
openclaw/workspaces/retrospective-template/: SOUL.md
openclaw/workspaces/v2-deferred/: retrospective-SOUL.md  scout-SOUL.md
plugins/documents/: pyproject.toml
plugins/documents/tests/: test_documents_plugin.py  test_documents_plugin_unit.py  test_plugin.py
plugins/documents/vizier/plugins/documents/: __init__.py  plugin.py
plugins/documents/vizier/plugins/documents/criteria/: facts_sourced.md  formatting_standards.md  structure_complete.md
plugins/software/: pyproject.toml
plugins/software/tests/: test_plugin.py  test_software_plugin.py  test_software_plugin_unit.py
plugins/software/vizier/plugins/software/: __init__.py  plugin.py
plugins/software/vizier/plugins/software/criteria/: lint_clean.md  no_debug_artifacts.md  test_meaningfulness.md  tests_pass.md  type_check.md
scripts/: check_heartbeat.sh  check_versions.py  ci-deploy-dry-run.sh  e2e_smoke_test.py  entrypoint.sh  fetch-secrets.sh  generate_briefing.py  memory-snapshot-cron.sh  migrate_to_docker.sh  openclaw-setup.sh  run_e2e.py  setup_server.sh
tests/: conftest.py  test_agents.py  test_commands.py  test_hermes_config.py  test_hooks.py  test_permissions.py  test_skills.py
vizier/: __init__.py  __main__.py  cli.py  config.py  divan.py  docker.py  models.py  province.py
vizier-mcp/: pyproject.toml
vizier-mcp/scripts/: memory-snapshot.sh
vizier-mcp/tests/: conftest.py  test_agent_tools.py  test_alerts.py  test_analytics_tool.py  test_audit_tools.py  test_briefing_generator.py  test_budget_tools.py  test_container_tools.py  test_haiku_evaluator.py  test_health.py  test_injection.py  test_learnings_tools.py  test_logging_structured.py  test_models.py  test_observability_tools.py  test_orchestration_models.py  test_orchestration_tools.py  test_project_init.py  test_realm_manager.py  test_realm_models.py  test_realm_tools.py  test_secrets.py  test_sentinel_models.py  test_sentinel_policy.py  test_sentinel_tools.py  test_server.py  test_smoke_real_llm.py  test_spec_tools.py  test_status_tool.py  test_trace_tools.py  test_transport.py  test_write_set.py
vizier-mcp/vizier_mcp/: __init__.py  __main__.py  audit_logger.py  config.py  health.py  logging_structured.py  realm.py  secrets.py  server.py
vizier-mcp/vizier_mcp/models/: __init__.py  alerts.py  audit.py  budget.py  events.py  learnings.py  messages.py  orchestration.py  realm.py  sentinel.py  spec.py  trace.py
vizier-mcp/vizier_mcp/plugins/: __init__.py  base.py  criteria.py  documents.py  software.py
vizier-mcp/vizier_mcp/sentinel/: __init__.py  haiku.py  injection.py  policy.py  write_set.py
vizier-mcp/vizier_mcp/templates/python/: config.yaml  sentinel.yaml
vizier-mcp/vizier_mcp/tools/: _spec_utils.py  agent.py  analytics.py  audit.py  budget.py  config_tool.py  container.py  dag.py  evidence.py  learnings.py  observability.py  orchestration.py  plugin.py  project.py  realm.py  research.py  sentinel.py  spec.py  status.py  trace.py  verification.py
(+249 files in other folders)
