[project]
name = "vizier-mcp"
version = "1.0.0"
description = "Vizier v2 MCP Server -- realm management and container lifecycle for the multi-agent work system"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = "MIT"
authors = [{ name = "Sultan", email = "" }]
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
]
