[project]
name = "vizier-daemon"
version = "0.7.0"
description = "Autonomous multi-agent work system - Daemon application"
requires-python = ">=3.11,<3.13"
dependencies = [
    "vizier-core",
    "aiogram>=3.25",
]

[project.scripts]
vizier-daemon = "vizier.daemon:main"

[dependency-groups]
dev = [
    "pyright>=1.1.390",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]

[tool.uv.sources]
"vizier-core" = { workspace = true }

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
venvPath = "../.."
venv = ".venv"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vizier"]
