[project]
name = "vizier-plugin-documents"
version = "0.1.0"
description = "Vizier plugin for document production projects"
requires-python = ">=3.11,<3.13"
dependencies = [
    "vizier-core",
    "python-docx>=1.0",
    "openpyxl>=3.0",
]

[project.entry-points."vizier.plugins"]
documents = "vizier.plugins.documents:DocumentsPlugin"

[dependency-groups]
dev = [
    "pyright>=1.1.390",
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]

[tool.uv.sources]
"vizier-core" = { workspace = true }

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
venvPath = "../.."
venv = ".venv"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vizier"]
